features :
01 - Added - Rank for user.
02 - Added - counter for Folders.
03 - Added - counter for Central Archive.
04 - Changed - attachment global lookup to tawasol attachment.
05 - Added - Quick Receive With Launch WF
06 - Added - Confirm the change of document security schema if changed to limited scope.
07 - Moved - star unstar into directive
08 - Fixed - grid indicators for user inbox and filtered inboxes.
09 - Added - starred inbox tab and fixed mail notification update(It was not updating on launch workflow).
10 - Removed - star/un-star from group mail.
11 - Added - Fields for grid/magazine view of user inbox. Field for search type of correspondence site(advanced/simple).
12 - Added - Advanced search feature for correspondence site in distribution list (Admin section).
13 - Added - Distribution list in manage correspondence sites.
14 - Added - Advanced/simple search in correspondence sites.
15 - Changed - Search screens to be having similar user experience as of add document.
16 - Added - G2G section.

Fixed issues :
12504: central archive - in central archive OU while adding a paper outgoing or incoming document there is two fields in paper outgoing while only one in incoming <check attached>
12643: central archive - when teh archive user add a new paper outgoing or incoming the ou field should not be mandatory
12310: Delegation - End date is expired still the Out of Office functionality toggle is enabled and functionality too.